crates/swc_ecma_parser/tests/test262-error-references/fail/168502012959421f.js.stderr
error: The left-hand side of an assignment expression must be a variable or a property access.
 --> $DIR/tests/test262-parser/fail/168502012959421f.js:1:5
  |
1 | for(([a]) of 0);
  |     ^^^^^

